Wed Feb 18 21:47:37 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): prevent misalignment.

Wed Feb 18 21:34:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): prevent misalignment.

Wed Feb 18 21:09:43 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): reduce code on
	  environments which have no control message.

Wed Feb 18 20:27:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (OBJCOPY): set ac_cv_prog_ac_ct_OBJCOPY to do nothing
	  on cygwin and mingw because symbols are exported by def file.

Wed Feb 18 15:35:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_chown): use chown unless HAVE_FCHOWN.

	* io.c (pipe_open): sarg is always used unless HAVE_FORK.

Wed Feb 18 15:23:34 2009  Akinori MUSHA  <knu@iDaemons.org>

	* bootstraptest/runner.rb: Use RUBY_DESCRIPTION if defined.

Wed Feb 18 14:33:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_resurrect), string.c (rb_str_resurrect): new
	  functions based on [ruby-dev:37983]

	* insns.def (putstring, duparray): use rb_{ary,str}_resurrect().

	* iseq.c (iseq_data_to_ary): needs to result TS_VALUE.

Wed Feb 18 12:35:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): fix for spaces before extention.
	  [ruby-dev:38044]

Wed Feb 18 12:00:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): suppress a warning.  named magic
	  numbers.

Wed Feb 18 10:29:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (thread_start_func_2): do not delete main thread from
	  living_threads.  [ruby-core:19385], [ruby-core:22158]

Wed Feb 18 01:05:05 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl: avoid cyclic require.

	* ext/openssl/lib/openssl/ssl-internal.rb: renamed from ssl.rb

	* ext/openssl/lib/openssl/x509-internal.rb: renamed from x509.rb.
